Archive2/04/a0025c4faac9eb/output
g++ (Ubuntu 4.8.1-2ubuntu1~12.04) 4.8.1
Copyright (C) 2013 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp:3:25: error: expected unqualified-id before ‘{’ token
     test() try : x{123} {
                         ^
main.cpp:5:5: error: expected unqualified-id before ‘catch’
     catch (...) {
     ^
main.cpp: In constructor ‘test::test()’:
main.cpp:3:23: error: expected ‘{’ at end of input
     test() try : x{123} {
                       ^
main.cpp:3:23: error: expected ‘catch’ at end of input
main.cpp:3:23: error: expected ‘(’ at end of input
main.cpp:3:23: error: expected type-specifier at end of input
main.cpp:3:23: error: expected ‘)’ at end of input
main.cpp:3:23: error: expected ‘{’ at end of input
